--- a/resultAccount.html
+++ b/resultAccount.html
@@ -99,7 +99,7 @@
               >
             </li>
             <li>
-              <a href="./settings.html"
+              <a href="./community.html"
                 ><i class="fa-solid fa-globe"></i> Community
               </a>
             </li>
