--- a/profile.html
+++ b/profile.html
@@ -102,6 +102,9 @@
               <a href="story.html"><i class="fas fa-users"></i> Stories</a>
             </li>
             <li>
+              <a href="./community.html"><i class="fa-solid fa-globe"></i> Community</a>
+            </li>
+            <li>
               <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
             </li>
           </ul>
