--- a/index.html
+++ b/index.html
@@ -69,16 +69,11 @@
 
   <div class="about-text">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-      delectus voluptatem eaque labore maxime quasi, pariatur quidem
-      aspernatur perferendis? Neque sit numquam veritatis maiores quo mollitia
-      nulla quaerat eos optio. Lorem ipsum dolor sit amet consectetur
-      adipisicing elit. Nam ipsa ullam officiis veniam quo ipsum eum iusto
-      odio aliquam culpa omnis iste repudiandae velit, eos eaque numquam aut
-      rem mollitia? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-      Saepe totam soluta cum doloribus, ratione explicabo fugiat quaerat illum
-      aperiam hic ipsam laborum ut debitis dolore possimus veritatis aliquam
-      error libero.
+      Di Circlo, kami percaya bahwa setiap momen layak dibagikan dengan cara yang aman dan bermakna. Kami hadir sebagai
+      platform sosial yang memberi kendali penuh kepada pengguna atas apa yang mereka bagikan dan dengan siapa.
+      Circlo bukan sekadar tempat berbagi—ini adalah ruang untuk terhubung, berekspresi, dan membangun komunitas yang
+      saling menghargai privasi dan keaslian.
+
     </p>
   </div>
 
