--- a/settings.html
+++ b/settings.html
@@ -39,7 +39,7 @@
                     <li><a href="search.html"><i class="fas fa-user-friends"></i> Search</a></li>
                     <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
                     <li><a href="./community.html"><i class="fa-solid fa-globe"></i> Community</a></li>
-                    <li><a href="./settings.html"><i class="fas fa-cog"></i> Pengaturan</a></li>
+                    <li><a href="./settings.html"><i class="fas fa-cog"></i> Settings</a></li>
                 </ul>
             </div>
         </aside>
