nambahin community link

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#" title="Home"><i class="fas fa-home"></i></a></li>
+                    <li><a href="home.html" title="Home"><i class="fas fa-home"></i></a></li>
                     <li><a href="chat.html" title="Chat"><i class="fas fa-paper-plane"></i></a></li>
                     <li><a href="community.html"><i class="fa-solid fa-tower-broadcast"></i></a></li>
                 </ul>
