--- a/settings.html
+++ b/settings.html
@@ -14,7 +14,8 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="home.html"><i class="fas fa-home"></i></a></li>
-                    <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                    <li><a href="chat.html"><i class="fas fa-paper-plane"></i></a></li>
+                    <li><a href="community.html"><i class="fa-solid fa-tower-broadcast"></i></a></li>
                 </ul>
             </nav>
             <div class="user-profile">
