--- a/community.html
+++ b/community.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li><a href="home.html" title="Home"><i class="fas fa-home"></i></a></li>
                     <li><a href="chat.html" title="Chat"><i class="fas fa-paper-plane"></i></a></li>
+                    <li><a href="community.html"><i class="fa-solid fa-tower-broadcast"></i></a></li>
                 </ul>
             </nav>
             <div class="user-profile">
