--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,7 @@
             </li>
             <li>
               <a href="chat.html"><i class="fas fa-paper-plane"></i></a>
+              <li><a href="community.html"><i class="fa-solid fa-tower-broadcast"></i></a></li>
             </li>
           </ul>
         </nav>
