--- a/search.html
+++ b/search.html
@@ -35,6 +35,7 @@
             </li>
             <li>
               <a href="chat.html"><i class="fas fa-paper-plane"></i></a>
+              <li><a href="community.html"><i class="fa-solid fa-tower-broadcast"></i></a></li>
             </li>
           </ul>
         </nav>
