--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
     <ul class="ig-menu">
         <li title="Home" onclick="loadPage('home.html', this)"><a href="./home.html"><i class="fas fa-home"></i></a></li>
         <li title="Story" onclick="loadPage('story.html', this)"><a href="./story.html"><i class="fas fa-users"></i></a></li>
-        <li><a href="./community.html"><i class="fa-solid fa-globe"></i> Community</a></li>
+        <li><a href="./community.html"><i class="fa-solid fa-globe"></i></a></li>
         <li title="Settings" onclick="loadPage('settings.html', this)"><a href="./settings.html"><i class="fas fa-cog"></i></a></li>
     </ul>
 
