--- a/community.html
+++ b/community.html
@@ -39,8 +39,8 @@
                     <a href="profile.html">
                         <img src="https://i.pravatar.cc/80?u=user1" alt="Foto Profil" class="profile-pic">
                     </a>
-                    <h3>User</h3>
-                    <p>@User</p>
+                    <h3>Kelompok 6</h3>
+                    <p>@kelompok.6</p>
                     <div class="profile-stats">
                         <div><span>1.401</span>
                             <p>Following</p>
