--- a/settings.html
+++ b/settings.html
@@ -28,8 +28,8 @@
         <aside class="sidebar-left">
             <div class="profile-card card">
                 <img src="https://i.pravatar.cc/80?u=user1" alt="Foto Profil" class="profile-pic">
-                <h3>User</h3>
-                <p>@User</p>
+                <h3>Kelompok 6</h3>
+                <p>@kelompok.6</p>
                 <div class="profile-stats">
                     <div><span>1.401</span><p>Following</p></div>
                     <div><span>5,201</span><p>Followers</p></div>
