--- a/profile.html
+++ b/profile.html
@@ -79,8 +79,8 @@
               class="profile-pic"
             />
           </a>
-          <h3>User</h3>
-          <p>@User</p>
+          <h3>Kelompok 6</h3>
+          <p>@kelompok.6</p>
           <div class="profile-stats">
             <div>
               <span>1.401</span>
