--- a/community.html
+++ b/community.html
@@ -16,6 +16,13 @@
             <div class="logo">
                 <a href="#">Circlo</a>
             </div>
+            
+            <button class="hamburger-menu" aria-label="Buka Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
             <nav class="main-nav">
                 <ul>
                     <li><a href="home.html" title="Home"><i class="fas fa-home"></i></a></li>
@@ -31,6 +38,25 @@
         </div>
     </header>
 
+        <nav class="mobile-nav">
+        <div class="mobile-profile-card">
+            <a href="profile.html">
+                <img src="https://i.pravatar.cc/80?u=user1" alt="Foto Profil" class="profile-pic">
+            </a>
+            <h3>User</h3>
+            <p>@User</p>
+            <div class="profile-stats">
+                <div><span>1.401</span><p>Following</p></div>
+                <div><span>5,201</span><p>Followers</p></div>
+            </div>
+        </div>
+        <ul>
+            <li><a href="search.html"><i class="fas fa-solid fa-magnifying-glass"></i> Search</a></li>
+            <li><a href="story.html"><i class="fas fa-users"></i> Stories</a></li>
+            <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+        </ul>
+    </nav>
+
     <main class="main-content">
         <div class="content-container">
 
@@ -42,12 +68,8 @@
                     <h3>Kelompok 6</h3>
                     <p>@kelompok.6</p>
                     <div class="profile-stats">
-                        <div><span>1.401</span>
-                            <p>Following</p>
-                        </div>
-                        <div><span>5,201</span>
-                            <p>Followers</p>
-                        </div>
+                        <div><span>1.401</span><p>Following</p></div>
+                        <div><span>5,201</span><p>Followers</p></div>
                     </div>
                 </div>
                 <div class="navigation-card card">
